# welding-drift-detection

./: .env.example  .gitignore  Dockerfile.airflow  Dockerfile.api  Dockerfile.frontend  Dockerfile.producer  Dockerfile.spark  PROGRESS_4TH_SESSION.md  README.md  docker-compose.yml  producer.py  pyproject.toml  requirements-api.txt  requirements-frontend.txt  requirements.txt  restart_consumers.sh  restart_spark.sh  run_frontend.py  schema.sql  spark_batch.py  spark_streaming.py
.streamlit/: config.toml
api/: deps.py  main.py
docs/: 20260504_readme.excalidraw  20260504_report.md  7차시 계획.md  7차시_DAG 수정방향.md  8회차_발표자료.md  handover_for_claude_sonnet.md  kafka_design.md  message_schema.json  pipeline_architecture.md  project_evolution_2026-04-29.md  sample_message.json  session5_airflow_dag_design.md  session6_image_prompts.md  session6_presentation_script.md  session6_scenarios_and_diagrams.md  session6_submission_plan_filled.md  welding_drift_pipeline_updated.excalidraw  welding_drift_pipeline_updated.md
frontend/: app.py
inference/: model.py
new_src/: run_realtime_experiment.py  run_realtime_sim.sh
scripts/: aggregate_daily_stats.sql  anonymize_concat_filenames.py  build_concat_from_raw_ch01.py  build_paired_battery_index.py  measure_p1_c1_stream_timing.sh  pipeline_always_on_daemon.sh  prepare_session6_top100.py  rebuild_laser_channel_layout.py  run_20220417_replay_and_dag_metrics.sh  run_experiment.sh  run_line_scale_consumers2.sh  run_local_experiment.py  session6_line_scale_consumer2.sh  session6_run_failure_tests.sh  session6_run_load_tests.sh  (+4 more)
(+40 files in other folders)
