[project]
name = "welding-kafka-submission"
version = "0.1.0"
description = "Kafka collection pipeline for welding sensor CSV replay"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "kafka-python==2.0.2",
    "numpy==1.26.4",
    "psycopg2-binary==2.9.9",
    "pyspark==3.5.1",
]

[tool.uv]
package = false
